--- a/styles.css
+++ b/styles.css
@@ -204,6 +204,57 @@ button {
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.homePage .home-page-main-text button {
+/* .homePage .home-page-main-text button {
 
+} */
+
+/* Styling the footer section*/
+
+footer {
+    text-align: center;
+    margin: 30px 0px 0px 0px;
+    padding: 260px 10px 20px 10px;
+    background: #0b3b3c;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.footer .footer-hero-image {
+    height: 200px;
+    width: 90vw;
+    object-fit: cover;
+    border-radius: 20px;
+    position: absolute;
+    top: -80px;
+}
+
+.footer-icons a {
+    margin-inline: 15px;
+    font-size: 20px;
+    color: black;
+    text-decoration: none;
+}
+
+.footer-icons i:hover {
+    transform: scale(2);
+    transition: 0.5s ease-in-out;
+    color: purple;
+}
+
+.footer .copy-right-container {
+    width: 95vw;
+    background-color: black;
+    color: white;
+    padding: 20px;
+}
+
+.web-author {
+    text-decoration: none;
+    color: gray;
+    transition: 0.5s;
+}
+.web-author:hover {
+    color: #90c8d1;
 }
