--- a/styles.css
+++ b/styles.css
@@ -213,12 +213,16 @@ button {
 footer {
     text-align: center;
     margin: 30px 0px 0px 0px;
-    padding: 260px 10px 20px 10px;
+    padding: 160px 10px 20px 10px;
     background: #0b3b3c;
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+footer h2 {
+    color: #90c8d1;
 }
 
 .footer .footer-hero-image {
@@ -230,18 +234,79 @@ footer {
     top: -80px;
 }
 
-.footer-icons a {
-    margin-inline: 15px;
-    font-size: 20px;
-    color: black;
-    text-decoration: none;
+.footer-links ul {
+    list-style: none;
 }
 
-.footer-icons i:hover {
-    transform: scale(2);
-    transition: 0.5s ease-in-out;
-    color: purple;
+.footer-links ul li {
+    padding: 5px;
 }
+
+.footer-links a {
+    margin-inline: 15px;
+    font-size: 15px;
+    font-weight: bold;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: black;
+    text-decoration: none;
+    transition: 0.5s ease-in-out;
+}
+
+.footer-links a:hover {
+    transform: scale(6);
+    color: #90c8d1;
+}
+
+.footer .container {
+    width: 90vw;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: 20px;
+}
+
+.dropbtn {
+  background-color: #90c8d1;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content > div {
+    display: flex;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+    color: #0b3b3c;
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #43a6b6;}
 
 .footer .copy-right-container {
     width: 95vw;
@@ -255,6 +320,7 @@ footer {
     color: gray;
     transition: 0.5s;
 }
+
 .web-author:hover {
     color: #90c8d1;
 }
