--- a/styles.css
+++ b/styles.css
@@ -208,12 +208,14 @@ button {
 /* Styling the info page...............................................................................................................*/
 .info-page {
     position: relative;
+    background-color: #0b3b3c;
+    border-radius: 0px 0px 50px 50px;
 }
 
 .info-page .top-dividing-curve {
     height: 50px;
     width: 100vw;
-    background-image: linear-gradient(0deg , #0b3b3c, #609596, white);
+    /* background-image: linear-gradient(0deg , #0b3b3c, #609596, white); */
     background-color: #0b3b3c;
     position: absolute;
     top: -50px;
