--- a/styles.css
+++ b/styles.css
@@ -244,7 +244,6 @@ button {
     max-width: 600px;
     height: auto;
     border-radius: 10px;
-
 }
 
 .info-page .small-top-img img{
@@ -266,6 +265,27 @@ button {
     margin-bottom: 50px;
     margin-left: 20px;
     margin: 10px 0px 50px 20px;
+}
+
+.info-page .stat-cards {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.info-page .stat-cards .stat-card {
+    background-color: #6d6c6c;
+    padding: 40px 10px 40px 10px;
+    text-align: center;
+    min-width: 250px;
+    border-radius: 10px;
+}
+
+.info-page .stat-cards .stat-card > div {
+    margin-bottom: 50px;
+}
+
+.info-page .stat-cards > div h1 {
+    font-size: 80px;
 }
 
 
