--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,8 @@ header > div {
     align-items: center;
     /*background-color: rgba(130, 130, 130, 0.5);*/
     background-color: #0b3b3c;
-    opacity: 0.9;
+    background-color: white;
+    /* opacity: 0.9; */
     position: absolute;
     width: 70vw;
     padding: 5px 0px 5px 0px;
@@ -98,17 +99,22 @@ header > div {
 
 .primary-navigation li {
     list-style: none;
+    padding: 10px;
+    text-align: center;
 }
 
 .nav-link {
     text-decoration: none;
-    color: white;
+    color: black;
+    font-weight: bold;
     position: relative;
     transition: all 0.4s;
+    padding: 10px;
 }
 
 .nav-link:hover, .nav-link:focus {
     color: #5badcc;
+    background-color: rgb(214, 212, 212);
 }
 
 /* styling the scrollbar */
@@ -164,6 +170,20 @@ header > div {
     margin: 0;
 }
 
+button {
+    padding: 10px;
+    border: none;
+    background-color: #90c8d1;
+    font-weight: bold;
+    font-size: 20px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+button:hover {
+    background-color: #43a6b6;
+    cursor: pointer;
+}
+
 /* styling the home page content ...........................................................*/
 .homePage {
     max-height: 100vh;
@@ -200,13 +220,10 @@ header > div {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-button {
-    padding: 10px;
-    border: none;
-    background-color: #90c8d1;
-    font-weight: bold;
-    font-size: 20px;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+.homePage button {
+    font-size: 40px;
+    padding: 15px;
+    border-radius: 10px;
 }
 
 /* Styling the info page...............................................................................................................*/
@@ -215,6 +232,8 @@ button {
     background-color: #0b3b3c;
     border-radius: 0px 0px 50px 50px;
     padding-bottom: 200px;
+    padding-top: 150px;
+    margin-bottom: 300px;
 }
 
 .info-page .top-dividing-curve {
@@ -338,7 +357,68 @@ button {
     color: white;
 }
 
+/*Styling the tips page...........................................................................................................*/
+.tipsPost-Page {
+    text-align: center;
+    margin: 50px 70px 140px 70px;
+    padding-top: 150px;
+}
 
+div.scroll-container {
+    overflow: auto;
+    white-space: nowrap;
+    padding: 10px;
+    margin: 1rem;
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+}
+
+.scroll-container::-webkit-scrollbar {
+    background-color: white;
+    height: 10px;
+    border-radius: 10px;
+}
+
+.scroll-container::-webkit-scrollbar-thumb {
+    background-color: #14213D;
+    border-radius: 10px;
+}
+
+.tips-card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    min-width: 300px;
+    width: 70%;
+}
+
+.tipsPost-image {
+    height: 200px;
+}
+
+.tipsPost-image img {
+    height: 100%;
+    width: 100%;
+}
+
+.tips-industry {
+    color: gray;
+}
+
+.tips-paragraph {
+    margin: 5px 0px;
+    max-width: 300px;
+}
+
+.tips-card a {
+    text-decoration: none;
+    color: blue;
+    cursor: default;
+}
+
+.tips-card .container h2 {
+    max-width: 100px;
+}
 
 /* Styling the footer section...........................................................................................................*/
 
