--- a/styles.css
+++ b/styles.css
@@ -407,7 +407,7 @@ div.scroll-container {
 
 .tips-paragraph {
     margin: 5px 0px;
-    max-width: 300px;
+    max-width: 100px;
 }
 
 .tips-card a {
@@ -495,7 +495,7 @@ footer h2 {
   display: none;
   position: absolute;
   background-color: #f1f1f1;
-  min-width: 160px;
+  min-width: 100%;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
