--- a/styles.css
+++ b/styles.css
@@ -361,7 +361,7 @@ button:hover {
 .tipsPost-Page {
     text-align: center;
     margin: 50px 70px 140px 70px;
-    padding-top: 150px;
+    padding-top: 70px;
 }
 
 div.scroll-container {
@@ -381,7 +381,7 @@ div.scroll-container {
 }
 
 .scroll-container::-webkit-scrollbar-thumb {
-    background-color: #14213D;
+    background-color: #0b3b3c;
     border-radius: 10px;
 }
 
@@ -405,19 +405,22 @@ div.scroll-container {
     color: gray;
 }
 
-.tips-paragraph {
+.tips-card .container {
+    padding: 0px 10px 30px 10px ;
+}
+
+.tips-paragraph , .tips-card .container h2 {
     margin: 5px 0px;
-    max-width: 100px;
+    max-width: 350px;
+    overflow-wrap: break-word;
+    white-space: normal;
+    min-height: 80px;
 }
 
 .tips-card a {
     text-decoration: none;
     color: blue;
     cursor: default;
-}
-
-.tips-card .container h2 {
-    max-width: 100px;
 }
 
 /* Styling the footer section...........................................................................................................*/
