--- a/styles.css
+++ b/styles.css
@@ -24,13 +24,13 @@ body {
     font-family: San-Francisco, Helvetica, Arial, Georgia, Tahoma, sans-serif;
 }
 
-/* Hide scrollbar but still be able to scroll ******************************************************/
+/* Hide scrollbar but still be able to scroll .................................................................................../
 /* Hide scrollbar for Chrome, Safari and Opera */
 body::-webkit-scrollbar {
     display: none;
 }
 
-/* Styling the header ................................................................*/
+/* Styling the header ...........................................................................................................*/
 header {
     position: sticky;
     top: 0;
@@ -47,7 +47,6 @@ header > div {
     align-items: center;
     background-image: url(Images/nav-background.jpg);
     background-size: cover;
-    /* opacity: 0.9; */
     position: absolute;
     width: 70vw;
     padding: 5px 0px 5px 0px;
@@ -137,7 +136,7 @@ header > div {
     border-radius: 5px 5px 0px 0px ;
 }
 
-/* Styling the sections ...........................................................................*/
+/* Default sections styling .........................................................................................................*/
 
 .pageSection {
     min-height: calc(100vh);
@@ -171,7 +170,7 @@ button:hover {
     cursor: pointer;
 }
 
-/* styling the home page content ...........................................................*/
+/* styling the home page content ...................................................................................................*/
 .homePage {
     max-height: 100vh;
     background-color: gray;
@@ -226,7 +225,6 @@ button:hover {
 .info-page .top-dividing-curve {
     height: 50px;
     width: 100vw;
-    /* background-image: linear-gradient(0deg , #0b3b3c, #609596, white); */
     background-color: #0b3b3c;
     position: absolute;
     top: -50px;
@@ -240,10 +238,6 @@ button:hover {
     gap: 40px;
     flex-wrap: wrap;
 }
-
-/* .info-page .images {
-    position: relative;
-} */
 
 .info-page .defining-container > div {
     flex: 1;
@@ -352,8 +346,6 @@ button:hover {
 
 .logging-page .logging-main-content {
     font-family: Arial, sans-serif;
-    /* background: #f4f4f4; */
-    /* background-image: linear-gradient(0deg, #494747, white ); */
     display: flex;
     gap: 30px;
     padding: 10px;
