--- a/login.css
+++ b/login.css
@@ -1,8 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     background: #f4f8f7;
-    background-image: url(Images/homebackground-image.jpeg);
-    background-repeat: no-repeat;
+    background-image: url(Images/nav-background.jpg);
     background-size: cover;
     display: flex;
     justify-content: center;
