--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: San-Francisco;
-    src: url(fonts/SFUIText-RegularG1.otf);
+    /* src: url(fonts/SFUIText-RegularG1.otf); */
 } 
 
 *{
