Updated the styling on the leaderboard.

--- a/css/styles.css
+++ b/css/styles.css
@@ -368,7 +368,7 @@ button:hover {
     width: 100%;
 }
 
-.logging-page form, .filter-section, .chart-container , #activity-log-container{
+.logging-page form, .filter-section, .chart-container , #activity-log-container, #leaderboard{
     background: #f4f4f4;
     padding: 15px;
     border-radius: 8px;
