--- a/css/login.css
+++ b/css/login.css
@@ -16,7 +16,7 @@ body {
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     max-width: 360px;
-
+    margin: 0px 20px;
 }
 
 .login-container .login-image {
